<resources>
    <string name="app_name">Lost and Found</string>
    <string name="title_home">Home</string>
    <string name="title_locate">Locate</string>
    <string name="title_camera">Camera</string>
    <string name="title_settings">Settings</string>
    <string name="settings_edittext_first_name">First Name</string>
    <string name="settings_edittext_last_name">Last Name</string>
    <string name="settings_edittext_email">Email</string>
    <string name="settings_button_update">Update User Information</string>
    <string name="camera_button_take_photo">Take Photo</string>
    <string name="camera_button_save_photo">Save Photo</string>
    <string name="camera_button_cancel">Cancel</string>
    <string name="camera_edittext_title">Title</string>
    <string name="camera_edittext_description">Description</string>
</resources>
